- fix freeze when returning with @Res - add design

--- a/template/bootstrap.html
+++ b/template/bootstrap.html
@@ -11,7 +11,32 @@
 </head>
 <body>
 <div class="container">
+	<div class="card">
+		<div class="card-body">
+			<h1 class="display-3 text-center" style="margin-top: 0">Files Hub</h1>
+			<p class="lead text-center">Bla-bla</p>
+			<hr />
+			<ul class="nav justify-content-center">
+				<li class="nav-item">
+					<a class="nav-link active" href="#">Business Section</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Operations Section</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="card" >
+		<img class="card-img-top" src="http://www.uscib.org/uscib-content/uploads/2017/06/competitiveness_business-1024x691.jpg" alt="business banner" style="height: 256px; object-fit: none; object-position: center; "/>
+		<div class="card-img-overlay">
+			<h4 class="text-bottom text-white" style="margin-top: 160px">Business Section</h4>
+			<hr style="width: 100px; border: solid red 3px; float: left" />
+		</div>
+	</div>
+
 	{{{ content }}}
+
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
