- add rendering fake files

--- a/template/bootstrap.html
+++ b/template/bootstrap.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-	<div class="card">
+	<div class="card mt-3">
 		<div class="card-body">
 			<h1 class="display-3 text-center" style="margin-top: 0">Files Hub</h1>
 			<p class="lead text-center">Bla-bla</p>
@@ -27,7 +27,7 @@
 		</div>
 	</div>
 
-	<div class="card" >
+	<div class="card mt-3">
 		<img class="card-img-top" src="http://www.uscib.org/uscib-content/uploads/2017/06/competitiveness_business-1024x691.jpg" alt="business banner" style="height: 256px; object-fit: none; object-position: center; "/>
 		<div class="card-img-overlay">
 			<h4 class="text-bottom text-white" style="margin-top: 160px">Business Section</h4>
