- fix DriveFile type hints

--- a/template/bootstrap.html
+++ b/template/bootstrap.html
@@ -14,8 +14,8 @@
 	<div class="card mt-3">
 		<div class="card-body">
 			<h1 class="display-3 text-center" style="margin-top: 0">Files Hub</h1>
-			<p class="lead text-center">Bla-bla</p>
-			<hr />
+			<!--<p class="lead text-center">Bla-bla</p>-->
+			<!--<hr />-->
 			<ul class="nav justify-content-center">
 				<li class="nav-item">
 					<a class="nav-link active" href="#">Business Section</a>
