--- a/template/bootstrap.html
+++ b/template/bootstrap.html
@@ -23,6 +23,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Operations Section</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/logout">Logout</a>
+				</li>
 			</ul>
 		</div>
 	</div>
