--- a/template/bootstrap.html
+++ b/template/bootstrap.html
@@ -8,37 +8,7 @@
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <style>
-
-        /* https://bootsnipp.com/snippets/featured/circle-button */
-        .btn-circle {
-            width: 30px;
-            height: 30px;
-            text-align: center;
-            padding: 6px 0;
-            font-size: 12px;
-            line-height: 1.428571429;
-            border-radius: 15px;
-        }
-        .btn-circle.btn-lg {
-            width: 50px;
-            height: 50px;
-            padding: 10px 16px;
-            font-size: 18px;
-            line-height: 1.33;
-            border-radius: 25px;
-        }
-        .btn-circle.btn-xl {
-            width: 70px;
-            height: 70px;
-            padding: 10px 16px;
-            font-size: 24px;
-            line-height: 1.33;
-            border-radius: 35px;
-        }
-
-
-    </style>
+    <link rel="stylesheet" href="css.css" />
 </head>
 <body>
 <div class="container">
@@ -62,7 +32,7 @@
 	</div>
 
 	<div class="card mt-3">
-		<img class="card-img-top" src="http://www.uscib.org/uscib-content/uploads/2017/06/competitiveness_business-1024x691.jpg" alt="business banner" style="height: 256px; object-fit: none; object-position: center; "/>
+		<img class="card-img-top" src="http://www.uscib.org/uscib-content/uploads/2017/06/competitiveness_business-1024x691.jpg" alt="business banner" style="height: 256px; object-fit: cover; object-position: center; width: 100%"/>
 		<div class="card-img-overlay">
 			<h4 class="text-bottom text-white" style="margin-top: 160px">Business Section</h4>
 			<hr style="width: 100px; border: solid red 3px; float: left" />
@@ -78,19 +48,6 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-<script>
-    $(() => {
-       $(document).on('click', 'a.file', (e) => {
-           e.preventDefault();
-           const $this = $(e.currentTarget);
-           const folderRow = $this.closest('.folder-row');
-           const descDiv = folderRow.find('.descriptionDiv');
-           console.log(descDiv);
-           descDiv.load('getFileInfo', $.param({
-               id: $this.attr('data-id')
-           }));
-       });
-    });
-</script>
+<script src="js.js"></script>
 </body>
 </html>
